# maze_game

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  game  projet.txt
engine/: CMakeLists.txt
engine/src/: Engine.h  Game.cpp  Window.cpp
src/: algorithm.cpp  algorithm2.cpp  devoir.cpp  extract_as_h.cpp  hello.cpp  main.cpp  main0.cpp  main05.cpp  main2.cpp  main3.cpp  main4.cpp  test.cpp  trap_sprite.cpp
src/embedded_res/texture/: darkness.h  floor_texture.h  floor_texture00.h  left_bottom_corner.h  left_wall.h  right_top_corner.h  top_wall.h
src/embedded_res/traps/: Bear_Trap.h  Push_Trap_Front.h  Push_Trap_Right.h  Spike_Trap.h
src/exercices/: exercice01.cpp  exercice02.cpp  exercice03.cpp  exercice04.cpp  exercice05.cpp  exercice06.cpp
src/include/: ini.h
src/include/Game/: Game.cpp  Game.h  Manager.cpp  Manager.h  Manger.cpp
src/include/Gui/: Button.cpp  Button.h  Gui.cpp  Gui.h  Menus.cpp  Menus.h
src/include/Level/: Level.cpp  Level.h
src/include/Map/: Map.h  map.cpp  map.h
src/include/Map/legacy/: map.cpp  map.h
src/include/Maze/: Map.cpp  Map.h  Maze.cpp  Maze.h  maze.cpp  maze.h
src/include/Maze/Legacy/: maze.cpp  maze.h
src/include/Player/: Legacy_PLAYER.cpp  Player.cpp  Player.h
src/include/Timer/: Timer.cpp  Timer.h
src/include/Window/: Window.cpp  Window.h
src/resources/gui/: button_exit.h  button_home.h  button_options.h  button_pause.h  button_start.h
src/resources/player/: Prototype_Character.h  player_idle.h  player_moving_down.h  player_moving_left.h  player_moving_right.h  player_moving_up.h
src/resources/texture/: bottom_wall.h  left_top_corner.h  right_bottom_corner.h  right_wall.h  wall.h  wall_1.h  wall_latterale.h
src/resources/traps/: Fire_Trap.h  Spike Trap.h
src/utils/: screen_scaling.cpp
tests/: tests.cpp
